fixed accordion overflow

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,7 +1,3 @@
-.user-button {
-  transition: border-radius 350ms ease;
-}
-
 .dropdown.dropdown-trans-enter {
   opacity: 0;
 }
